# repo-gpt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  How_to_call_functions_with_chat_models.ipynb  README.md  cli.py  openai_service.py  poetry.toml  pyproject.toml  serach_service.py
.github/workflows/: pr.yaml  pr_it_tests.yaml  pre_release.yaml
.repo_gpt/: code_embeddings.pkl
code_manager/: code_extractor.py  code_manager.py  code_processor.py  custom_typing.py
expt/: autogen-agents.ipynb  autogen-tools.ipynb  call_functions_with_chat_models.ipynb  web-qa.ipynb
expt/text/openai.com/: openai.com.txt  openai.com_about#content.txt  openai.com_api-data-privacy.txt  openai.com_blog?authors=mira-murati.txt  openai.com_careers_#open.txt  openai.com_careers_ai-product-counsel.txt  openai.com_careers_congressional-lead-public-policy#content.txt  openai.com_careers_engineering-manager-human-data.txt  openai.com_careers_head-of-procurement#content.txt  openai.com_careers_infrastructure-engineer-chatgpt.txt  openai.com_careers_it-application-engineer.txt  openai.com_careers_lead-policy-analyst-public-policy.txt  openai.com_careers_media-relations-partner-communications#content.txt  openai.com_careers_partnerships-engineer-government-and-nonprofit#content.txt  openai.com_careers_policy-research-scientist-geopolitics#content.txt  openai.com_careers_product-manager-safety-systems.txt  openai.com_careers_revenue-accounting-manager#content.txt  openai.com_careers_search?c=security.txt  openai.com_careers_security-engineer-threat-intelligence.txt  openai.com_careers_senior-manager-technical-infrastructure-accounting.txt  openai.com_careers_software-engineer-billing-and-monetization.txt  openai.com_careers_software-engineer-chatgpt-product-backend.txt  openai.com_careers_software-engineer-chatgpt-product-development#content.txt  openai.com_careers_software-engineer-fraud#content.txt  openai.com_careers_software-engineer-product-development#content.txt  openai.com_careers_software-engineer-safety.txt  openai.com_careers_solutions-architect-london.txt  openai.com_careers_solutions-engineer#content.txt  openai.com_careers_technical-program-manager-applied-ai#content.txt  openai.com_careers_uk-policy-and-partnerships-lead.txt  openai.com_chatgpt.txt  openai.com_contact-sales#content.txt  openai.com_contributions_gpt-4.txt  openai.com_form_cybersecurity-grant-program.txt  openai.com_form_for-good-use-cases.txt  openai.com_form_researcher-access-program.txt  openai.com_policies_api-data-usage-policies.txt  openai.com_policies_coordinated-vulnerability-disclosure-policy.txt  openai.com_policies_data-processing-addendum.txt  openai.com_policies_plugin-terms#content.txt  (+13 more)
expt/text/pola-rs.github.io/: pola-rs.github.io_polars-book_user-guide_index.html.txt  pola-rs.github.io_polars_py-polars_html_reference_index.html.txt  pola-rs.github.io_polars_py-polars_html_reference_io.html.txt  pola-rs.github.io_series_api_polars.Series.is_not_nan.html.txt
file_handler/: abstract_handler.py  handler_registry.py  python_file_handler.py
repogpt/: cli.py  console.py  logging_config.py  openai_service.py  prompt_service.py  routes.py  search_service.py  service.py  utils.py
repogpt/agents/: base_agent.py  central_intelligence.py  code_writer.py  repo_comprehender.py  simple_memory_store.py
repogpt/agents/autogen/: llm_agent.py  repo_qna.py  user_proxy_function_call_agent.py
repogpt/code_manager/: abstract_extractor.py  code_dir_extractor.py  code_manager.py  code_processor.py  code_vscode_file_extractor.py
repogpt/codebase_analyzer/: class_analyzer.py  dependency_analyzer.py  function_call_analyzer.py
repogpt/file_handler/: abstract_handler.py  generic_code_file_handler.py  generic_sql_file_handler.py  terraform_file_handler.py
src/: cli.py  openai_service.py  serach_service.py  utils.py
src/code_manager/: code_extractor.py  code_manager.py  code_processor.py
src/dependency_docs_manager/: scraper.py
src/file_handler/: handler_registry.py  python_file_handler.py
src/repo_gpt/: add_tests.py  cli.py  console.py  git_service.py  incorrect.py  openai_service.py  prompt_service.py  search_service.py  serach_service.py  test_generator.py  utils.py  vscode_prompt_service.py
src/repo_gpt/agents/: base_agent.py  repo_comprehender.py  simple_memory_store.py
src/repo_gpt/agents/autogen/: repo_qna.py  user_proxy_function_call_agent.py
src/repo_gpt/code_manager/: abstract_extractor.py  code_dir_extractor.py  code_extractor.py  code_manager.py  code_modifier.py  code_processor.py  code_vscode_file_extractor.py
src/repo_gpt/codebase_analyzer/: class_analyzer.py  dependency_analyzer.py  function_call_analyzer.py  graph_analyzer.py
src/repo_gpt/file_handler/: abstract_handler.py  generic_code_file_handler.py  generic_sql_file_handler.py  python_file_handler.py  sql_file_handler.py
test/code_manager/: code_extractor.py
test/file_handler/: test_csharp_extract_code.py  test_csharp_extract_vscode_ext_codelens.py  test_elixir_extract_code.py  test_elixir_extract_vscode_ext_codelens.py  test_generic_code_file_handler_extract_code.py  test_php_extract_code.py  test_php_extract_vscode_ext_codelens.py  test_python_extract_code.py  test_python_extract_vscode_ext_codelens.py  test_python_file_handler_extract_code.py  test_python_generic_code_file_handler_extract_code.py  test_sql_extract_vscode_ext_codelens.py  test_sql_file_handler_extract_code.py  test_terraform_extract_code.py  test_typescript_extract_code.py  test_typescript_extract_vscode_ext_codelens.py
test/file_handler/python_files/: no_function_class_python_file.py  non_python_file.txt  well_structured_python_file.py
test/it/: conftest.py  test_analyze.py  test_help.py  test_query.py  test_search.py  test_setup.py  test_test_generator.py  utils.py
test/unit/code_manager/: code_extractor.py
test/unit/file_handler/: test_typescript_extract_vscode_ext_codelens.py
