[tool.poetry]
name = "repo-gpt"
version = "0.1.0"
description = "Search your code repository using GPT3.5 or GPT4."
authors = ["Shruti Patel <shruti222patel@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "repo_gpt", from = "src"}]
repository = "https://github.com/shruti222patel/repo-gpt"
keywords = ["openai", "gpt", "repo", "repository", "search", "semantic-search", "query", "analyze-code", "gpt3", "gpt3.5"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.2"
numpy = "^1.24.3"
halo = "^0.0.31"
tqdm = "^4.65.0"
pathspec = "^0.11.1"
openai = "^0.27.8"
rich = "^13.4.1"
redbaron = "^0.9.2"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pre-commit = "^3.3.2"
exceptiongroup = { version="^1.1.1", markers="python_version <= '3.10'" }

[tool.poetry.scripts]
repo-gpt = "repo_gpt.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_paths = ["src"]
