[tool.poetry]
name = "repo-gpt"
version = "0.3.0"
description = "Search your code repository using GPT3.5 or GPT4."
authors = ["Shruti Patel <shruti222patel@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "repo_gpt", from = "src"}]
repository = "https://github.com/shruti222patel/repo-gpt"
keywords = ["openai", "gpt", "repo", "repository", "search", "semantic-search", "query", "analyze-code", "gpt3", "gpt3.5"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0.2"
numpy = "^1.24.3"
tqdm = "^4.67.1"
pathspec = "^0.11.1"
openai = "^1.68.2"
rich = "^13.4.1"
tenacity = "^8.2.2"
tree-sitter-languages = "^1.10.2"
tiktoken = "^0.4.0"
configargparse = "^1.7"
toml = "^0.10.2"
code2flow = "^2.5.1"
networkx = "^3.1"
pydeps = "^1.12.17"
pylint = "^3.0.1"
python-levenshtein = "^0.23.0"
colored = "^2.2.3"
fuzzywuzzy = "^0.18.0"
polars = "^0.19.12"
multilspy = "^0.0.14"
pytest = "^8.3.5"
autogen = "^0.8.3"
ag2 = {extras = ["openai"], version = "^0.8.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^3.3.2"
exceptiongroup = { version="^1.1.1", markers="python_version <= '3.10'" }
jupyterlab = "^4.0.8"
bump2version = "^1.0.1"
ipython = "^8.14.0"
pygraphviz = "^1.11" # Moved here temporarily because so pygraphviz doesn't need to be install on ci/cd.
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.26.0"

#[tool.poetry.dependencies.pygraphviz]
## This marker ensures that the build options are only applied on macOS
#markers = "sys_platform == 'darwin'"
#build-options = [
#    "--global-option=build_ext",
#    "--global-option=-I/usr/local/opt/graphviz/include/",
#    "--global-option=-L/usr/local/opt/graphviz/lib/"
#]

[tool.poetry.scripts]
repo-gpt = "repo_gpt.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"  # or "function", depending on your use case

[tool.repo_gpt]
code_root_path = "./src/repo_gpt"
pickle_path  = "./.repo_gpt/code_embeddings.pkl"
